front page rebranding; zoom instructions z-index fix

--- a/client/workflow/home/homePage.less
+++ b/client/workflow/home/homePage.less
@@ -22,4 +22,5 @@
   font-size: 18px;
   padding-bottom: 60px;
   cursor: pointer;
+  z-index: -1;
 }
